@@ -4,7 +4,7 @@ read_exprs_matrix <- function(x) {
     stop(paste(x, "does not exist\n"))
   x.con <- readLines(con=x, n=3L, warn=FALSE)
   if(grepl("^\\#1\\.2", x.con[1L])) { ## gct format
-    mat <- .Call("read_gct", x, NULL, keep.desc=FALSE);
+    mat <- .Call("read_gct", x, NULL, keep.desc=TRUE);
     return(mat)
   } else {
     if (any(grepl("\t", x.con))) { ## tab-delimited file
